# voxel_bevy

./: Cargo.toml
assets/shaders/: chunk.wgsl  chunk_prepass.wgsl  testt.wgsl
src/: block.rs  chunk.rs  chunk_loader.rs  chunk_material.rs  chunk_mesh.rs  chunk_render_plugin.rs  debug_world.rs  greedy_chunk_render_plugin.rs  main.rs  quad.rs  section_neighbors.rs  world.rs
