[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["bevy_render", "bevy_image", "bevy_camera", "bevy_window", "bevy_winit", "png", "bevy_pbr", "debug", "tonemapping_luts", "zstd_rust", "bevy_light", "bevy_post_process", "bevy_log"] }
bevy_flycam = "0.17.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false